Socials nav z-index fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,6 +118,7 @@ nav.sticky:hover a {
   position: fixed;
   bottom: 0;
   right: 0;
+  z-index: 90;
 }
 .nav_socials ul {
   margin: 40px;
