--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -59,6 +59,7 @@ nav.sticky {
   position: fixed;
   bottom: 0;
   right: 0;
+  z-index: 90;
 
   ul {
     margin: 40px;
